src/test/ui/feature-gates/feature-gate-unsafe_block_in_unsafe_fn.stderr
error: unnecessary `unsafe` block
  --> $DIR/feature-gate-unsafe_block_in_unsafe_fn.rs:6:5
   |
LL | unsafe fn foo() {
   | --------------- because it's nested under this `unsafe` fn
LL |     unsafe {
   |     ^^^^^^ unnecessary `unsafe` block
   |
note: the lint level is defined here
  --> $DIR/feature-gate-unsafe_block_in_unsafe_fn.rs:1:9
   |
LL | #![deny(unused_unsafe)]
   |         ^^^^^^^^^^^^^

error: aborting due to previous error

