src/test/ui/feature-gates/feature-gate-unsafe_block_in_unsafe_fn.rs
#![deny(unused_unsafe)]

unsafe fn unsf() {}

unsafe fn foo() {
    unsafe { //~ ERROR unnecessary `unsafe` block
        unsf()
    }
}

fn main() {}
